# zxx-pcb

./: .gitignore  README.md
rp2350b_driver/: CMakeLists.txt  cross-rp2350b-arm.txt  main.cpp  meson.build  meson.options  test.asm  weact-openocd.cfg
rp2350b_driver/subprojects/: pico-sdk.wrap
tools/: Makefile  crt0_vex.S  flash_tool.py  ftdi_eeprom.config  isr.c  sections.lds  z80_boot.c
z80_qfn64dip/: caravel.kicad_sym  sym-lib-table  z80_qfn64dip.kicad_dru  z80_qfn64dip.kicad_pcb  z80_qfn64dip.kicad_prl  z80_qfn64dip.kicad_pro  z80_qfn64dip.kicad_sch
z80_qfn64dip/KiCadModels.pretty/: IC_ADAPTER_ 220-1-40-006.kicad_mod  UDFN-8-1EP-2x3mm_P0.5mm_EP1.6x0.2mm.kicad_mod
z80_qfn64dip/ProjectLibrary.pretty/: SolderJumper-2_P2x0.9mm_Open_TrianglePad.kicad_mod
z80_qfn64dip/kicad_symbols/: TPS7A2018PDQNRM3.kicad_sym  TPS7A2033PDQNRM3.kicad_sym  TPS7A2050PDQNRM3.kicad_sym
z80_qfn64dip/kicad_symbols/footprints.pretty/: DQN0004A-MFG.kicad_mod  TPS7A20.kicad_mod  UDFN-8-1EP-2x3mm_P0.5mm_EP1.6x0.2mm.kicad_mod
